# agent-budgeteer

./: README.md  project_plan.md  project_plan.txt  pyproject.toml  research-report.md
budgeteer/: __init__.py  async_sdk.py  calibrator.py  config.py  context_manager.py  events.py  exceptions.py  llm_client.py  models.py  policy.py  reporting.py  roi.py  router.py  sdk.py  telemetry.py  tool_executor.py
tests/: conftest.py  test_async.py  test_calibration_integration.py  test_calibrator.py  test_calibrator_persistence.py  test_config.py  test_configurable_degrade.py  test_context_manager.py  test_enhanced_reporting.py  test_events.py  test_llm_client.py  test_milestone8.py  test_models.py  test_orchestration.py  test_policy.py  test_production.py  test_reporting.py  test_retry_fallback.py  test_roi.py  test_roi_integration.py  test_router.py  test_sdk.py  test_telemetry.py  test_telemetry_maintenance.py  test_tool_executor.py  test_validation.py
