[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-budgeteer"
version = "0.1.0"
description = "Control your agent's cost, latency, tokens with budget-aware planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
