[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-budgeteer"
version = "0.1.0"
description = "Control your agent's cost, latency, tokens with budget-aware planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Raimondas L" },
]
keywords = ["agent", "budget", "llm", "cost-control", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/raimondasl/agent-budgeteer"
Repository = "https://github.com/raimondasl/agent-budgeteer"
Issues = "https://github.com/raimondasl/agent-budgeteer/issues"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
